# CAM-Creation-Studio

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
app/: index.html  (+2 more)
python/: README.md  pyproject.toml
python/cam_creation_studio/: __init__.py  enums.py  models.py
python/cam_creation_studio/cli/: __init__.py  __main__.py  common.py  errors.py  main.py  output.py
python/cam_creation_studio/feeds_speeds/: __init__.py  calculator.py  machines.py  materials.py  tools.py
python/cam_creation_studio/gcode/: __init__.py  body.py  dialects.py  footer.py  formatter.py  generator.py  header.py  parser.py  validator.py  words.py
python/cam_creation_studio/geometry/: __init__.py  bounds.py  diagnostics.py  entities.py  importer.py  layers.py  models.py  summary.py
python/cam_creation_studio/handoff/: __init__.py  handoff.py
python/tests/: test_cli_dispatch.py  test_cli_errors_and_helpers.py  test_cli_feeds.py  test_cli_generate.py  test_cli_parse_preview.py  test_cli_validate.py  test_compatibility_aliases.py  test_diagnostic_codes.py  test_enums.py  test_feeds_diagnostics.py  test_feeds_speeds.py  test_generator.py  test_generator_model.py  test_geometry.py  test_geometry_import.py  test_geometry_models.py  test_golden_parity.py  test_handoff.py  test_image_etch.py  test_laser_classification.py  test_models.py  test_parser.py  test_parser_model.py  test_preview_model.py  test_safety_and_shared.py  test_shared_utils.py  test_toolpath_model_build.py  test_validator.py  test_validator_codes.py  test_validator_modules.py  test_words_formatter.py
(+67 files in other folders)
